bindings/c/include/cgenalyzer.h

/**
 * \defgroup Enumerations Enumerations
 * @{
 */

/**
 * @brief GnAnalysisType enumerates analysis types
 */
typedef enum GnAnalysisType {
	GnAnalysisTypeDNL, ///< DNL (differential nonlinearity)
	GnAnalysisTypeFourier, ///< Fourier (FFT)
	GnAnalysisTypeHistogram, ///< Histogram
	GnAnalysisTypeINL, ///< INL (integral nonlinearity)
	GnAnalysisTypeWaveform ///< Waveform
} GnAnalysisType;
/**
 * @brief GnCodeFormat enumerates binary code formats
 */
typedef enum GnCodeFormat {
	GnCodeFormatOffsetBinary, ///< Offset Binary
	GnCodeFormatTwosComplement ///< Two's Complement
} GnCodeFormat;
/**
 * @brief GnDnlSignal enumerates signal types for which DNL can be computed
 */
typedef enum GnDnlSignal {
	GnDnlSignalRamp, ///< Ramp
	GnDnlSignalTone ///< Tone (Sinusoid)
} GnDnlSignal;
/**
 * \defgroup APIUtilities API Utilities
 * @{
 */

/**
 * @brief gn_analysis_results_key_sizes
 * @return 0 on success, non-zero otherwise
 * @details The library string termination setting determines whether or not a
 * null terminator is included in the key sizes.  See \ref
 * gn_set_string_termination.
 */
__api int gn_analysis_results_key_sizes(
		size_t *key_sizes, ///< [out] Key size array pointer
		size_t key_sizes_size, ///< [in] Key size array size
		GnAnalysisType type ///< [in] Analysis type
);
/**
 * @brief gn_analysis_results_size
 * @return 0 on success, non-zero otherwise
 */
__api int gn_analysis_results_size(
		size_t *size, ///< [out] Number of key-value result pairs
		GnAnalysisType type ///< [in] Analysis type
);
/**
 * @brief gn_enum_value
 * @return 0 on success, non-zero otherwise
 */
__api int
gn_enum_value(int *value, ///< [out] Underlying value of enumeration::enumerator
		const char *enumeration, ///< [in] Enumeration name
		const char *enumerator ///< [in] Enumerator name
);
/**
 * @brief gn_error_check
 * @return Always returns 0
 */
__api int gn_error_check(
		bool *error ///< [out] true if an error has occurred; false otherwise
);
/**
 * @brief gn_error_clear
 * @return Always returns 0
 */
__api int gn_error_clear();
/**
 * @brief gn_error_string
 * @return 0 on success, non-zero otherwise
 */
__api int gn_error_string(char *buf, ///< [out] Pointer to character array
		size_t size ///< [in] Size of character array
);
/**
 * @brief gn_set_string_termination
 * @return Always returns 0
 * @details Some functions in this library return strings by filling character
 * buffers (arrays) provided by the caller.  This function sets a global library
 * setting that determines whether or not strings should be null-terminated.  If
 * set to true, functions that return strings will write a '\0' as the last
 * character.  In addition, functions that return the size of a string will
 * include the null terminator in the size.
 */
__api int gn_set_string_termination(
		bool null_terminated ///< [in] If true, strings are terminated with '\0'
);
/**
 * @brief gn_version_string
 * @return 0 on success, non-zero otherwise
 */
__api int gn_version_string(char *buf, ///< [in,out] Pointer to character array
		size_t size ///< [in] Size of character array
);
/**
 * \defgroup APIUtilityHelpers Helpers
 * @{
 */

/**
 * @brief gn_error_string_size
 * @return Always returns 0
 * @details The library string termination setting determines whether or not a
 * null terminator is included in the size.  See \ref gn_set_string_termination.
 */
__api int gn_error_string_size(
		size_t *size ///< [out] Number of characters in error string
);
/**
 * @brief gn_version_string_size
 * @return Always returns 0
 * @details The library string termination setting determines whether or not a
 * null terminator is included in the size.  See \ref gn_set_string_termination.
 */
__api int gn_version_string_size(
		size_t *size ///< [out] Number of characters in version string
);
/**
 * \defgroup ArrayOperations Array Operations
 * @{
 */

/**
 * @brief gn_abs
 * @return 0 on success, non-zero otherwise
 */
__api int gn_abs(double *out, ///< [out] Output array pointer
		size_t out_size, ///< [in] Output array size
		const double *in, ///< [in] Input array pointer
		size_t in_size ///< [in] Input array size
);
/**
 * @brief gn_angle
 * @return 0 on success, non-zero otherwise
 */
__api int gn_angle(double *out, ///< [out] Output array pointer
		size_t out_size, ///< [in] Output array size
		const double *in, ///< [in] Input array pointer
		size_t in_size ///< [in] Input array size
);
/**
 * @brief gn_db
 * @return 0 on success, non-zero otherwise
 */
__api int gn_db(double *out, ///< [out] Output array pointer
		size_t out_size, ///< [in] Output array size
		const double *in, ///< [in] Input array pointer
		size_t in_size ///< [in] Input array size
);
/**
 * @brief gn_db10
 * @return 0 on success, non-zero otherwise
 */
__api int gn_db10(double *out, ///< [out] Output array pointer
		size_t out_size, ///< [in] Output array size
		const double *in, ///< [in] Input array pointer
		size_t in_size ///< [in] Input array size
);
/**
 * @brief gn_db20
 * @return 0 on success, non-zero otherwise
 */
__api int gn_db20(double *out, ///< [out] Output array pointer
		size_t out_size, ///< [in] Output array size
		const double *in, ///< [in] Input array pointer
		size_t in_size ///< [in] Input array size
);
/**
 * @brief gn_norm
 * @return 0 on success, non-zero otherwise
 */
__api int gn_norm(double *out, ///< [out] Output array pointer
		size_t out_size, ///< [in] Output array size
		const double *in, ///< [in] Input array pointer
		size_t in_size ///< [in] Input array size
);
/**
 * \defgroup CodeDensity Code Density
 * @{
 */

/**
 * @brief gn_code_axis
 * @return 0 on success, non-zero otherwise
 */
__api int gn_code_axis(double *out, ///< [out] Array pointer
		size_t size, ///< [in] Array size
		int n, ///< [in] Resolution
		GnCodeFormat format ///< [in] Code format
);
/**
 * @brief gn_code_axisx
 * @return 0 on success, non-zero otherwise
 */
__api int gn_code_axisx(double *out, ///< [out] Array pointer
		size_t size, ///< [in] Array size
		int64_t min, ///< [in] Min code
		int64_t max ///< [in] Max code
);
/**
 * @brief gn_dnl
 * @return 0 on success, non-zero otherwise
 */
__api int gn_dnl(double *dnl, ///< [out] Output array pointer
		size_t dnl_size, ///< [in] Output array size
		const uint64_t *hist, ///< [in] Input array pointer
		size_t hist_size, ///< [in] Input array size
		GnDnlSignal type ///< [in] Signal type
);
/**
 * @brief gn_dnl_analysis
 * @return 0 on success, non-zero otherwise
 * @details The results contain the following key-value pairs (see general
 * description of
 * \ref AnalysisRoutines "Analysis Routines").
 * <table>
 *   <tr><th> Key            <th> Description
 *   <tr><td> min            <td> Minumum value
 *   <tr><td> max            <td> Maximum value
 *   <tr><td> avg            <td> Average value
 *   <tr><td> rms            <td> RMS value
 *   <tr><td> min_index      <td> Index of first occurence of minimum value
 *   <tr><td> max_index      <td> Index of first occurence of maximum value
 *   <tr><td> first_nm_index <td> Index of first non-missing code
 *   <tr><td> last_nm_index  <td> Index of last non-missing code
 *   <tr><td> nm_range       <td> Non-missing code range (1 + (last_nm_index -
 * first_nm_index))
 * </table>
 */
__api int
gn_dnl_analysis(char **rkeys, ///< [out] Result keys array pointer
		size_t rkeys_size, ///< [in] Result keys array size
		double *rvalues, ///< [out] Result values array pointer
		size_t rvalues_size, ///< [in] Result values array size
		const double *dnl, ///< [in] Input array pointer
		size_t dnl_size ///< [in] Input array size
);
/**
 * @brief gn_hist16
 * @return 0 on success, non-zero otherwise
 */
__api int gn_hist16(
		uint64_t *hist, ///< [out] Histogram array pointer
		size_t hist_size, ///< [in] Histogram array size
		const int16_t *in, ///< [in] Input array pointer
		size_t in_size, ///< [in] Input array size
		int n, ///< [in] Code width (i.e. ADC resolution)
		GnCodeFormat format, ///< [in] Code format
		bool preserve ///< [in] If true, hist is not cleared before computing the
		///< histogram
);
/**
 * @brief gn_hist32
 * @return 0 on success, non-zero otherwise
 */
__api int gn_hist32(
		uint64_t *hist, ///< [out] Histogram array pointer
		size_t hist_size, ///< [in] Histogram array size
		const int32_t *in, ///< [in] Input array pointer
		size_t in_size, ///< [in] Input array size
		int n, ///< [in] Code width (i.e. ADC resolution)
		GnCodeFormat format, ///< [in] Code format
		bool preserve ///< [in] If true, hist is not cleared before computing the
		///< histogram
);
/**
 * @brief gn_hist64
 * @return 0 on success, non-zero otherwise
 */
__api int gn_hist64(
		uint64_t *hist, ///< [out] Histogram array pointer
		size_t hist_size, ///< [in] Histogram array size
		const int64_t *in, ///< [in] Input array pointer
		size_t in_size, ///< [in] Input array size
		int n, ///< [in] Code width (i.e. ADC resolution)
		GnCodeFormat format, ///< [in] Code format
		bool preserve ///< [in] If true, hist is not cleared before computing the
		///< histogram
);
/**
 * @brief gn_histx16
 * @return 0 on success, non-zero otherwise
 */
__api int gn_histx16(
		uint64_t *hist, ///< [out] Histogram array pointer
		size_t hist_size, ///< [in] Histogram array size
		const int16_t *in, ///< [in] Input array pointer
		size_t in_size, ///< [in] Input array size
		int64_t min, ///< [in] Min code
		int64_t max, ///< [in] Max code
		bool preserve ///< [in] If true, hist is not cleared before computing the
		///< histogram
);
/**
 * \defgroup CodeDensityHelpers Helpers
 * @{
 */

/**
 * @brief gn_code_density_size
 * @return 0 on success, non-zero otherwise
 */
__api int gn_code_density_size(size_t *size, ///< [out] Output array size
		int n, ///< [in] Code width (i.e. ADC resolution)
		GnCodeFormat format ///< [in] Code format
);
/**
 * @brief gn_code_densityx_size
 * @return 0 on success, non-zero otherwise
 */
__api int gn_code_densityx_size(size_t *size, ///< [out] Output array size
		int64_t min, ///< [in] Min code
		int64_t max ///< [in] Max code
);