bindings/csharp/Genalyzer/NativeMethods.cs

// Copyright (C) 2024-2025 Analog Devices, Inc.
//
// SPDX short identifier: ADIBSD OR GPL-2.0-or-later

using System;
using System.Runtime.InteropServices;

namespace Genalyzer
{
    /// <summary>
    /// Raw P/Invoke declarations for every exported symbol in libgenalyzer.
    /// All signatures match the C API in cgenalyzer.h and
    /// cgenalyzer_simplified_beta.h exactly.
    /// Return value: 0 = success, non-zero = failure (unless noted otherwise).
    /// </summary>
    internal static class NativeMethods
    {
        // ---------------------------------------------------------------
        // Library name - resolved at runtime on Windows / Linux / macOS.
        // ---------------------------------------------------------------
        private const string LibName = "libgenalyzer";

#if NET6_0_OR_GREATER
        // ---------------------------------------------------------------
        // Native-library resolution
        //
        // The [DllImport] declarations above reference the logical name
        // "libgenalyzer".  Default runtime probing often fails to locate the
        // shared library in test/CI layouts and reports an opaque
        // DllNotFoundException.  This module initializer registers an explicit
        // resolver that probes, in order:
        //   1. the GENALYZER_LIB_PATH environment variable (a file or a
        //      directory containing the library),
        //   2. the application base directory,
        //   3. the platform-decorated names (libgenalyzer.so / .dylib /
        //      genalyzer.dll) via the default loader,
        // and otherwise throws a single, actionable error.
        //
        // Guarded to net6.0+; on the net4.7 target System.Runtime.InteropServices
        // .NativeLibrary is unavailable, so the library must be discoverable via
        // the OS loader path (PATH on Windows, LD_LIBRARY_PATH on Linux) or be
        // placed next to the assembly.  See the binding README.
        // ---------------------------------------------------------------
        // CA2255: a module initializer is exactly the right place to register a
        // DllImportResolver - it must run before any P/Invoke is resolved, and
        // this assembly is the sole owner of the "libgenalyzer" import name.
#pragma warning disable CA2255
        [System.Runtime.CompilerServices.ModuleInitializer]
        internal static void RegisterResolver()
        {
            NativeLibrary.SetDllImportResolver(
                typeof(NativeMethods).Assembly, ResolveLibrary);
        }
#pragma warning restore CA2255

        private static IntPtr ResolveLibrary(
            string libraryName, System.Reflection.Assembly assembly,
            DllImportSearchPath? searchPath)
        {
            if (libraryName != LibName)
                return IntPtr.Zero; // not ours; let the default loader handle it

            foreach (var candidate in CandidatePaths())
            {
                if (NativeLibrary.TryLoad(candidate, out IntPtr handle))
                    return handle;
            }

            throw new DllNotFoundException(
                $"Unable to locate the native '{LibName}' library. Set the " +
                "GENALYZER_LIB_PATH environment variable to the library file or " +
                "its containing directory, place it next to the managed " +
                "assembly, or install it on the system loader path. Tried: " +
                string.Join(", ", CandidatePaths()));
        }

        private static System.Collections.Generic.IEnumerable<string> CandidatePaths()
        {
            string[] fileNames = NativeLibraryFileNames();

            string? envPath =
                Environment.GetEnvironmentVariable("GENALYZER_LIB_PATH");
            if (!string.IsNullOrEmpty(envPath))
            {
                // Treat as either a direct file path or a directory.
                if (System.IO.Directory.Exists(envPath))
                    foreach (string name in fileNames)
                        yield return System.IO.Path.Combine(envPath, name);
                else
                    yield return envPath;
            }

            string baseDir = AppContext.BaseDirectory;
            if (!string.IsNullOrEmpty(baseDir))
                foreach (string name in fileNames)
                    yield return System.IO.Path.Combine(baseDir, name);

            // Finally, the bare decorated and logical names so the default OS
            // loader search path (PATH / LD_LIBRARY_PATH / DYLD_LIBRARY_PATH)
            // still applies.
            foreach (string name in fileNames)
                yield return name;
            yield return LibName;
        }

        private static string[] NativeLibraryFileNames()
        {
            // The project builds the native library with OUTPUT_NAME
            // "libgenalyzer" on every platform (see bindings/c/src/CMakeLists.txt),
            // so the decorated name keeps the "lib" prefix even on Windows
            // (libgenalyzer.dll, not genalyzer.dll). The unprefixed name is kept
            // as a secondary candidate for third-party/redistributed builds.
            if (RuntimeInformation.IsOSPlatform(OSPlatform.Windows))
                return new[] { "libgenalyzer.dll", "genalyzer.dll" };
            if (RuntimeInformation.IsOSPlatform(OSPlatform.OSX))
                return new[] { "libgenalyzer.dylib" };
            return new[] { "libgenalyzer.so" };
        }
#endif

        // ===============================================================
        // API Utilities
        // ===============================================================

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_analysis_results_key_sizes(
            [Out] UIntPtr[] keySizes,
            UIntPtr keySizesSize,
            int type);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_analysis_results_size(
            out UIntPtr size,
            int type);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_enum_value(
            out int value,
            [MarshalAs(UnmanagedType.LPStr)] string enumeration,
            [MarshalAs(UnmanagedType.LPStr)] string enumerator);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_error_check(
            [MarshalAs(UnmanagedType.I1)] out bool error);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_error_clear();

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_error_string(
            [Out] byte[] buf,
            UIntPtr size);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_error_string_size(
            out UIntPtr size);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_set_string_termination(
            [MarshalAs(UnmanagedType.I1)] bool nullTerminated);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_version_string(
            [Out] byte[] buf,
            UIntPtr size);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_version_string_size(
            out UIntPtr size);

        // ===============================================================
        // Array Operations
        // ===============================================================

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_abs(
            [Out] double[] output, UIntPtr outSize,
            [In]  double[] input,  UIntPtr inSize);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_angle(
            [Out] double[] output, UIntPtr outSize,
            [In]  double[] input,  UIntPtr inSize);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_db(
            [Out] double[] output, UIntPtr outSize,
            [In]  double[] input,  UIntPtr inSize);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_db10(
            [Out] double[] output, UIntPtr outSize,
            [In]  double[] input,  UIntPtr inSize);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_db20(
            [Out] double[] output, UIntPtr outSize,
            [In]  double[] input,  UIntPtr inSize);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_norm(
            [Out] double[] output, UIntPtr outSize,
            [In]  double[] input,  UIntPtr inSize);

        // ===============================================================
        // Code Density
        // ===============================================================

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_code_axis(
            [Out] double[] output, UIntPtr size,
            int n, int format);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_code_axisx(
            [Out] double[] output, UIntPtr size,
            long min, long max);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_code_density_size(
            out UIntPtr size, int n, int format);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_code_densityx_size(
            out UIntPtr size, long min, long max);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_dnl(
            [Out] double[]  dnl,  UIntPtr dnlSize,
            [In]  ulong[]   hist, UIntPtr histSize,
            int type);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_dnl_analysis(
            [In, Out] IntPtr[] rkeys, UIntPtr rkeysSize,
            [Out]     double[] rvalues, UIntPtr rvaluesSize,
            [In]      double[] dnl,  UIntPtr dnlSize);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_hist16(
            [Out] ulong[]  hist, UIntPtr histSize,
            [In]  short[]  input, UIntPtr inSize,
            int n, int format,
            [MarshalAs(UnmanagedType.I1)] bool preserve);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_hist32(
            [Out] ulong[]  hist, UIntPtr histSize,
            [In]  int[]    input, UIntPtr inSize,
            int n, int format,
            [MarshalAs(UnmanagedType.I1)] bool preserve);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_hist64(
            [Out] ulong[]  hist, UIntPtr histSize,
            [In]  long[]   input, UIntPtr inSize,
            int n, int format,
            [MarshalAs(UnmanagedType.I1)] bool preserve);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_histx16(
            [Out] ulong[]  hist, UIntPtr histSize,
            [In]  short[]  input, UIntPtr inSize,
            long min, long max,
            [MarshalAs(UnmanagedType.I1)] bool preserve);
